--- a/follow_me/follow_me.ipynb
+++ b/follow_me/follow_me.ipynb
@@ -9,7 +9,7 @@
     "Jun Zhu\n",
     "----\n",
     "\n",
-    "In this notebook, we will build a segmentation network to track VIP in an image. We use the data set for one of the projects at RoboND, Udacity. However, we have implemented different models. One is the original [SegNet](https://arxiv.org/pdf/1511.00561.pdf) and the other has a similar structure but all the convolutional layers are replaced by [depthwise separable convolutional layers](https://arxiv.org/pdf/1610.02357.pdf). However, due to technical constraint, **we have not combined the pooling indices in the encoder to the decoder!!!** Moreover, I used the default upsampling implemented in Keras which simply repeats the values in the lower layer and differs from bilinear upsampling."
+    "In this notebook, I built two segmentation networks to track VIP in an image. I used the data set for one of the projects at RoboND, Udacity. However, I have implemented different models. One is the original [SegNet](https://arxiv.org/pdf/1511.00561.pdf) and the other has a similar structure but all the convolutional layers are replaced by depthwise separable convolutional layers. Due to the technical constraint, **I have not combined the pooling indices in the encoder to the decoder!!!** Moreover, I used the default upsampling implemented in Keras which simply repeats the values in the lower layer and differs from bilinear upsampling."
    ]
   },
   {
@@ -161,7 +161,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_loss_history(filename):\n",
