--- a/follow_me/follow_me.ipynb
+++ b/follow_me/follow_me.ipynb
@@ -116,7 +116,9 @@
     }
    ],
    "source": [
-    "from parameters import train_images, train_masks\n",
+    "from parameters import train_data_folder\n",
+    "train_images = sorted(glob.glob(os.path.join(train_data_folder, 'images', '*.jpeg')))\n",
+    "train_masks = sorted(glob.glob(os.path.join(train_data_folder, 'masks', '*.png')))\n",
     "\n",
     "show_images(train_images, train_masks, new_size=(224, 224))"
    ]
@@ -145,7 +147,9 @@
     }
    ],
    "source": [
-    "from parameters import vali_images, vali_masks\n",
+    "from parameters import vali_data_folder\n",
+    "vali_images = sorted(glob.glob(os.path.join(vali_data_folder, 'images', '*.jpeg')))\n",
+    "vali_masks = sorted(glob.glob(os.path.join(vali_data_folder, 'masks', '*.png')))\n",
     "\n",
     "show_images(vali_images, vali_masks)"
    ]
@@ -407,7 +411,9 @@
     }
    ],
    "source": [
-    "from parameters import test_images, test_masks\n",
+    "from parameters import test_data_folder\n",
+    "test_images = sorted(glob.glob(os.path.join(test_data_folder, 'images', '*.jpeg')))\n",
+    "test_masks = sorted(glob.glob(os.path.join(test_data_folder, 'masks', '*.png')))\n",
     "\n",
     "output_folder = \"depthwise_segnet_inference\"\n",
     "pred_images = sorted(glob.glob(os.path.join(output_folder, \"*.png\")))\n",
@@ -630,7 +636,9 @@
     }
    ],
    "source": [
-    "from parameters import test_images, test_masks\n",
+    "from parameters import test_data_folder\n",
+    "test_images = sorted(glob.glob(os.path.join(test_data_folder, 'images', '*.jpeg')))\n",
+    "test_masks = sorted(glob.glob(os.path.join(test_data_folder, 'masks', '*.png')))\n",
     "\n",
     "output_folder = \"segnet_inference\"\n",
     "pred_images = sorted(glob.glob(os.path.join(output_folder, \"*.png\")))\n",
@@ -666,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   },
   "widgets": {
    "state": {},
